Migrando proyecto a 2022 1-> Spring boot 2.7.4 2-> Spring Security 2.5.3 3-> Postgres14

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,9 @@
-firstname.size=First name must have a minimum of 3 characters
-lastname.size=Last name must have at least 3 characters
+first_name.size=First name must have a minimum of 3 characters
+last_name.size=Last name must have at least 3 characters
 dui.size= DUI must be 9 characters
-address.size = Address must have at least 3 characters
-phone.size=Phone must have 9 characters
+direccion.size = Address must have at least 3 characters
+telefono.size=Phone must have 9 characters
 email.size=Email must be up to 150 characters in the format xxxxx@xxxxx.com
+examen_name.size =Exam name must contain 3-50 characters
+examen_descripcion.size=The exam description must contain 3-150 characters
+especialidad_name.size=The name of the specialty must contain 3-50 characte
